# RueRust

./: .env  API_DOCUMENTATION.md  Cargo.toml  Schemas.sql  database_fix.sql  fix.py  fix_backend.sh  flutter.sh  gen_analytics.sh  image_upload.sh  menu.json  menu.sh  menu_fixed.json  migration_v2.sql  migration_v3.sql  migration_v4.sql  migration_v5.sql  patch.sh  rust_source.txt
.github/workflows/: deploy.yml
RueDashboard-main/: .env  index.html  part1.sh  part2.sh  part3.sh  part4-7.sh  patch.sh  tsconfig.tsbuildinfo
RueDashboard-main/dashboard_patches/: patch_branches.py  patch_dashboard.py  patch_inventory.py  patch_recipes.py  patch_shifts.py  patch_users.py
RueDashboard-main/src/: App.tsx  index.css  main.tsx
RueFlutter-main/: .gitignore  README.md  add_shift_report.sh  flutter_source.txt  pubspec.yaml  rue-v2-part2.sh  update.sh
RueFlutter-main/lib/: main.dart
RueFlutter-main/windows/: CMakeLists.txt
backend_patches/: patch_orders.py
migrations/: 004_image_upload.sql
rue_pos/: add_shift_report.sh  batch1.sh  batch2.sh  batch3.sh  patch.sh  pubspec.yaml  release.keystore  rue-v2-part1.sh  update.sh
rue_pos/lib/: main.dart  router.dart
rue_pos/linux/: CMakeLists.txt
rue_pos/offline_complete_patches/: patch_close_shift.py  patch_home_screen.py  patch_open_shift.py  patch_order_screen.py
rue_pos/test/: widget_test.dart
rue_pos/web/: index.html  manifest.json
src/: db.rs  errors.rs  main.rs
src/adjustments/: handlers.rs  routes.rs
src/auth/: guards.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  routes.rs
src/branches/: handlers.rs  (+1 more)
(+236 files in other folders)
