[package]
name = "rue-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["compress-brotli", "compress-gzip", "compress-zstd", "rustls-0_23"] }
actix-cors         = "0.7"
actix-multipart    = "0.7"
actix-files        = "0.6"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4", "v5", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
jsonwebtoken       = "9"
bcrypt             = "0.15"
dotenvy            = "0.15"
thiserror          = "1"
tracing            = "0.1"
tracing-actix-web  = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures            = "0.3"
image              = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
rustls             = "0.23"
rustls-pemfile     = "2"
sqlx               = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "bigdecimal", "rust_decimal"] }
bigdecimal         = { version = "0.3", features = ["serde"] }
rust_decimal       = { version = "1", features = ["serde-float", "maths"] }
rust_decimal_macros = "1"

